client: fix Tagify text cropping

--- a/client/css/post-list-view.styl
+++ b/client/css/post-list-view.styl
@@ -309,3 +309,5 @@
             width: 100%
         .tagify__input
             display: inline-block
+        .tagify__tag-text
+            display: inline
